# esg-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.demo.example  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_evidence_page_fields.py  0003_report_metadata_and_status.py  0004_analysis_stages_and_partial_runs.py  0005_assessment_risks.py  0006_review_snapshots.py  0007_improvement_actions.py  0008_export_versions.py  0009_active_analysis_run_gate.py  0010_risk_v2_dimensions.py  0011_standard_structure_and_ai_suggestions.py
backend/data/holdout/: goldwind_2024_recall_gold.json
backend/data/manifests/: assets_manifest.json  compilation_guardrails.json  gri_disclosure_manifest.json  gri_requirement_checklist.json  gri_requirement_checklist_v2.json  gri_requirement_pack.json  gri_requirement_structure_v2.json  source_manifest.json
backend/data/standards/: gri_requirements.sample.json
backend/src/: main.py
backend/src/agents/: disclosure_agent.py
backend/src/api/: schemas.py
backend/src/config/: environment_safety.py  settings.py
backend/src/db/: models.py  repositories.py  session.py
backend/src/domain/: ai_models.py  enums.py  models.py  versions.py
backend/src/reports/: __init__.py  profile.py  profile_builder.py
backend/src/services/: ai_assessment_service.py  ai_evaluation_service.py  analysis_job.py  analysis_runner.py  demo_environment.py  ocr.py  (+9 more)
backend/tests/: database.py  test_database_isolation.py  test_health.py  test_settings.py
(+220 files in other folders)
