[project]
name = "esg-agent-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings",
  "python-multipart",
  "sqlalchemy>=2",
  "alembic",
  "psycopg[binary]",
  "pypdf",
  "pdfplumber",
  "ocrmypdf",
  "openai",
  "openpyxl>=3.1.5",
  "reportlab>=5.0.0",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider", "--basetemp=../tmp/pytest-current"]
